--- a/styles/index.css
+++ b/styles/index.css
@@ -26,5 +26,9 @@
     transition: all 0.2s ease-in-out;
 }
 
+.chroma-icon {
+    filter: brightness(0%)
+}
+
 @tailwind components;
 @tailwind utilities;
